# ansible-aws_ec2_environment

./: .ansible-lint  .editorconfig  .gitignore  .ls-lint.yaml  eslint.config.mjs  lefthook.yaml  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml  requirements.yaml
.github/workflows/: ci.yaml
defaults/: main.yaml
handlers/: main.yaml
meta/: main.yaml
molecule/default/: converge.yaml  molecule.yml
tasks/: environment.yaml  main.yaml
