[project]
name = "ansible-aws-environment"
version = "0.0.0"
dependencies = [
  "ansible==10.4.0",
  "docker==7.1.0",
  "netaddr==1.3.0",
  "segno==1.6.1",
  "selinux==0.3.0",
  "passlib==1.7.4" 
]
requires-python = "== 3.10"

[tool]

[tool.uv]
managed = true
dev-dependencies = [
  "molecule==24.9.0",
  "molecule-docker" 
]

[tool.uv.workspace]
members = []

[tool.setuptools]
py-modules = []