[project]
name = "ansible-aws-environment"
version = "0.0.0"
dependencies = [
  "ansible==10.4.0",
  "docker==7.1.0",
  "netaddr==1.3.0",
  "segno==1.6.1",
  "selinux==0.3.0",
  "passlib==1.7.4" 
]
requires-python = "== 3.10"

[tool]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'" 
]
managed = true
dev-dependencies = [
  "molecule==24.9.0",
  "molecule-docker",
  "ansible-lint==24.9.0; sys_platform == 'linux'" 
]

[tool.uv.workspace]
members = []

[[tool.uv.dependency-metadata]]
name = "ansible-lint"
version = "24.9.0"
requires-dist = [
  "attrs==24.2.0",
  "black==24.8.0",
  "bracex==2.5",
  "cffi==1.17.1",
  "click==8.1.7",
  "cryptography==43.0.1",
  "filelock==3.16.0",
  "importlib-metadata==8.4.0",
  "jinja2==3.1.4",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2023.12.1",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdurl==0.1.2",
  "mypy-extensions==1.0.0",
  "packaging==24.1",
  "pathspec==0.12.1",
  "platformdirs==4.3.2",
  "pycparser==2.22",
  "pygments==2.18.0",
  "pyyaml==6.0.2",
  "referencing==0.35.1",
  "rich==13.8.1",
  "rpds-py==0.20.0",
  "ruamel-yaml==0.18.6",
  "subprocess-tee==0.4.2",
  "tomli==2.0.1",
  "typing-extensions==4.12.2",
  "wcmatch==9.0 ; python_version < '3.12'",
  "yamllint==1.35.1",
  "zipp==3.20.1" 
]

[tool.setuptools]
py-modules = []