[project]
name = "ansible-aws-environment"
version = "0.0.0"
dependencies = [
  "ansible==10.4.0",
  "docker==7.1.0",
  "netaddr==1.3.0",
  "segno==1.6.1",
  "selinux==0.3.0",
  "passlib==1.7.4"
]
requires-python = ">=3.12,<3.13"

[tool]

[tool.uv]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux'"
]
managed = true
dev-dependencies = [
  "molecule==24.9.0",
  "molecule-docker",
  "ansible-lint==24.9.0; sys_platform == 'linux'"
]

[tool.uv.workspace]
members = []

[[tool.uv.dependency-metadata]]
name = "ansible-lint"
version = "24.12.2"
requires-dist = [
  "attrs==24.2.0",
  "black==24.10.0",
  "bracex==2.5.post1",
  "cffi==1.17.1",
  "click==8.1.7",
  "cryptography==44.0.0",
  "filelock==3.16.1",
  "importlib-metadata==8.5.0",
  "jinja2==3.1.4",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "markupsafe==3.0.2",
  "mypy-extensions==1.0.0",
  "packaging==24.2",
  "pathspec==0.12.1",
  "platformdirs==4.3.6",
  "pycparser==2.22",
  "pyyaml==6.0.2",
  "referencing==0.35.1",
  "rpds-py==0.22.3",
  "ruamel-yaml==0.18.6",
  "ruamel-yaml-clib==0.2.12",
  "subprocess-tee==0.4.2",
  "tomli==2.2.1",
  "wcmatch==10.0",
  "yamllint==1.35.1",
  "zipp==3.21.0"
]

[tool.setuptools]
py-modules = []